# Chinese-Checkers

./: .gitignore  Board.cpp  Board.h  Doxyfile  HowToCompile.txt  README.md  client.cpp  server.cpp  shell.nix
client/: CMakeLists.txt  run.sh
client/gui/: about_dialog.py  chinese_checkers_board.py  game_window.py  hexagon.py  history_window.py  lobbies_list.py  main.py  main_menu.py  old_games_list.py
client/include/: Bot.hpp  board.hpp  client.hpp  fast_board.hpp  standard_board.hpp
client/src/: Bot.cpp  binding.cpp  board.cpp  client.cpp  fast_board.cpp  standard_board.cpp
docs/client_gui/html/: about__dialog_8py.html  annotated.html  chinese__checkers__board_8py.html  classabout__dialog_1_1AboutDialog-members.html  classabout__dialog_1_1AboutDialog.html  classchinese__checkers__board_1_1ChineseCheckersBoard-members.html  classchinese__checkers__board_1_1ChineseCheckersBoard.html  classes.html  classgame__window_1_1GameWindow-members.html  classgame__window_1_1GameWindow.html  classhexagon_1_1Hexagon-members.html  classhexagon_1_1Hexagon.html  classlobbies__list_1_1LobbiesList-members.html  classlobbies__list_1_1LobbiesList.html  classmain_1_1Communicator-members.html  classmain_1_1Communicator.html  classmain_1_1MainWindow-members.html  classmain_1_1MainWindow.html  classmain__menu_1_1MainMenu-members.html  classmain__menu_1_1MainMenu.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  game__window_8py.html  hexagon_8py.html  hierarchy.html  lobbies__list_8py.html  main_8py.html  main__menu_8py.html  menudata.js  namespaceabout__dialog.html  namespacechinese__checkers__board.html  namespacegame__window.html  namespacehexagon.html  namespacelobbies__list.html  namespacemain.html  namespacemain__menu.html  namespacemembers.html  (+2 more)
docs/client_gui/latex/: about__dialog_8py.tex  annotated.tex  chinese__checkers__board_8py.tex  classabout__dialog_1_1AboutDialog.eps  classabout__dialog_1_1AboutDialog.tex  classchinese__checkers__board_1_1ChineseCheckersBoard.eps  classchinese__checkers__board_1_1ChineseCheckersBoard.tex  classgame__window_1_1GameWindow.eps  classgame__window_1_1GameWindow.tex  classhexagon_1_1Hexagon.tex  classlobbies__list_1_1LobbiesList.eps  classmain_1_1Communicator.eps  (+22 more)
docs/client_src/: binding_8cpp.html  client_8cpp.html  doxygen_crawl.html  files.html  globals.html  globals_defs.html  globals_func.html
include/: client.h
server/: .gitignore  CMakeLists.txt  \  ]  shell.nix
server/docker/: docker-compose.yml  init.sql
server/include/: AbstractCommand  abstract_command.hpp  board.hpp  board_factory.hpp  bot.hpp  cmd_add_game.hpp  cmd_exit_game.hpp  cmd_join_game.hpp  cmd_list_games.hpp  cmd_list_history.hpp  cmd_move.hpp  cmd_move_history.hpp  db_connector.hpp  fast_board.hpp  game.hpp  handle_clients.hpp  server.hpp  server_controller.hpp  standard_board.hpp
server/old/: handle_clients.cpp  handle_clients.hpp
server/src/: board.cpp  board_preview.cpp  bot.cpp  db_connector.cpp  fast_board.cpp  game.cpp  init_cmds.cpp  main.cpp  server.cpp  server_controller.cpp  standard_board.cpp
server/tests/: CMakeLists.txt  test_server.cpp  test_server_controller.cpp
uml/: activitydiagram.puml  client_sequence.puml  system.puml  usage.puml
(+94 files in other folders)
